--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "422c5fc0",
+   "execution_count": 2,
+   "id": "b822bbc8",
    "metadata": {
     "tags": []
    },
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7b22a54420747528204f1ef9870cc34",
+       "model_id": "9735a85618844f8f82b6c66b5659984d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,43 +40,54 @@
     "\n",
     "%run PageConfigurator.py\n",
     "\n",
-    "c = PageConfigurator(output)\n",
-    "\n",
-    "c.page.open()"
+    "c = PageConfigurator(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5124679c-0c84-49cd-8869-28110326937f",
+   "execution_count": 5,
+   "id": "1bf76a60",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e5b27438e6147728dc20e5bd5152b4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "PageConfigurator(children=[Card(children=[Row(children=[Button(children=[Container(children=[Tooltip(bottom=Tr…"
+       "{'appname': 'Demo',\n",
+       " 'title': 'Geospatial page with left panel',\n",
+       " 'titlecolor': '#0d856d',\n",
+       " 'titledark': True,\n",
+       " 'titleheight': 54,\n",
+       " 'titleimageurl': '',\n",
+       " 'footercolor': '#a0dcd0',\n",
+       " 'footerdark': False,\n",
+       " 'footerheight': 30,\n",
+       " 'copyrighttext': 'European Commission - Joint Research Centre',\n",
+       " 'show_back': True,\n",
+       " 'left_back': True,\n",
+       " 'show_help': True,\n",
+       " 'show_credits': True,\n",
+       " 'logoappurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png',\n",
+       " 'logocreditsurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/EC-JRC-logo_horizontal_EN_neg_transparent-background.png',\n",
+       " 'logowidth': 40,\n",
+       " 'creditswidth': 120,\n",
+       " 'transition': 'dialog-bottom-transition'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c"
+    "c.page.state"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ef4bab1",
+   "id": "ff39b22c",
    "metadata": {},
    "outputs": [],
    "source": []
