--- a/src/vois/vuetify/Tests/pageTest.ipynb
+++ b/src/vois/vuetify/Tests/pageTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6ec48832",
+   "execution_count": 1,
+   "id": "d9ea86d9",
    "metadata": {
     "tags": []
    },
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a034b6712fb347589d50e316deb351c6",
+       "model_id": "fc902314aa8649fd8674492a2eed73b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,8 +43,9 @@
     "    p.refresh()\n",
     "    \n",
     "\n",
-    "def on_delete(*args):\n",
-    "    pass\n",
+    "def on_force_close(*args):\n",
+    "    #p.close()\n",
+    "    output.clear_output()\n",
     "\n",
     "%run ../page.py\n",
     "\n",
@@ -55,7 +56,7 @@
     "         on_logoapp=on_click, copyrighttext='European Commission - Joint Research Centre', logowidth=50,\n",
     "         show_back=True, left_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
     "\n",
-    "p.customButtonAdd('mdi-delete', 'Click here to delete your registration', on_delete)\n",
+    "p.customButtonAdd('mdi-delete', 'Click here to force page closing', on_force_close)\n",
     "\n",
     "card = p.create()\n",
     "card.class_ = 'pa-4 ma-0'\n",
@@ -65,8 +66,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "81503b71-5f9b-4401-a3d3-f6a6d0546153",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.state = {'transition': 'dialog-transition', 'title': 'new title'}\n",
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3b55f078-2654-4066-900b-4b998e874cb2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'appname': 'Sherpa',\n",
+       " 'title': 'geographic search',\n",
+       " 'titlecolor': '#008800',\n",
+       " 'titledark': True,\n",
+       " 'titleheight': 80,\n",
+       " 'titleimageurl': '',\n",
+       " 'footercolor': '#4444aa',\n",
+       " 'footerdark': True,\n",
+       " 'footerheight': 60,\n",
+       " 'copyrighttext': 'European Commission - Joint Research Centre',\n",
+       " 'show_back': True,\n",
+       " 'left_back': True,\n",
+       " 'show_help': True,\n",
+       " 'show_credits': True,\n",
+       " 'logoappurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png',\n",
+       " 'logocreditsurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/EC-JRC-logo_horizontal_EN_neg_transparent-background.png',\n",
+       " 'logowidth': 50,\n",
+       " 'creditswidth': 120,\n",
+       " 'transition': 'dialog-bottom-transition'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.state"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "0b0823af",
+   "id": "012f928c",
    "metadata": {
     "tags": []
    },
@@ -107,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "59a5b36f",
+   "id": "89674c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7ee92be3",
+   "id": "a6d3ecf8",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5327b6dc",
+   "id": "3e33478f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -179,9 +234,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -193,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
