--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b18cf9d4",
+   "id": "96d54e79",
    "metadata": {
     "tags": []
    },
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb63edb6-0d49-4f6f-a0c8-dfe0f9af028f",
+   "id": "135cb3d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,9 +57,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
