--- a/src/vois/vuetify/Tests/layersTest.ipynb
+++ b/src/vois/vuetify/Tests/layersTest.ipynb
@@ -20,32 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca0e6257",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99cd29d98030416685f8aa4353cb21dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(Output(layout=Layout(height='0px', width='0px')), Html(children=[VBox(children=(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
     "# Management of layers in a ipyleaflet map\n",
     "import ipyleaflet\n",
     "from jeodpp import inter, imap\n",
     "from ipywidgets import widgets, Layout\n",
     "\n",
-    "%run layers.py\n",
+    "%run ../layers.py\n",
     "\n",
     "layer1 = interaproLayer('Merit DEM',    path=inter.collections.BaseData.Elevation.MERIT.Hillshade) #, opacity=0.4)\n",
     "layer2 = interaproLayer('Corine 2018',  path=inter.collections.BaseData.Landcover.CLC2018)\n",
@@ -66,25 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e77f8336",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8121ec632dc44cc85cdf8a914814e93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Tabs(background_color='white', children=[TabsSlider(color='#f8bd1a'), Tab(children=['Basemap'],…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Management of Basemap and layers in a ipyleaflet map\n",
     "import ipyleaflet\n",
@@ -190,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
