Colors update in templates and PageConfigurator

--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9735a85618844f8f82b6c66b5659984d",
+       "model_id": "0a7c17d49a104434aea7d61484b11851",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1bf76a60",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
       "text/plain": [
        "{'appname': 'Demo',\n",
        " 'title': 'Geospatial page with left panel',\n",
-       " 'titlecolor': '#0d856d',\n",
+       " 'titlecolor': None,\n",
        " 'titledark': True,\n",
        " 'titleheight': 54,\n",
        " 'titleimageurl': '',\n",
@@ -75,7 +75,7 @@
        " 'transition': 'dialog-bottom-transition'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ff39b22c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#F44336'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.titlecolor.color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd06eb7f-f401-4bba-930f-feffd34322b4",
    "metadata": {},
    "outputs": [],
    "source": []
