--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -2,27 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "96d54e79",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfd9d471f50f4deabf2a231ea492e19f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -42,6 +27,9 @@
     "p = template1panel(output)\n",
     "card = p.create()\n",
     "\n",
+    "p.titlecolor  = '#ccaaaa'\n",
+    "p.footercolor = '#6699aa'\n",
+    "\n",
     "# Open the page\n",
     "p.open()"
    ]
@@ -49,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135cb3d1",
+   "id": "dfdab35b-163f-40f0-9f97-93263a8e0b6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,9 +45,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -71,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
