--- a/src/vois/templates/template2panelsTest.ipynb
+++ b/src/vois/templates/template2panelsTest.ipynb
@@ -9,6 +9,9 @@
    },
    "outputs": [],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -24,6 +27,9 @@
     "p = template2panels(output)\n",
     "card = p.create()\n",
     "\n",
+    "p.titlecolor  = '#ccaaaa'\n",
+    "p.footercolor = '#6699aa'\n",
+    "\n",
     "# Open the page\n",
     "p.open()"
    ]
@@ -31,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47add95-3274-4915-9a78-45ba9bbdf9c8",
+   "id": "1815f530-fde1-433d-952f-7efccf8a9b4d",
    "metadata": {},
    "outputs": [],
    "source": []
