--- a/src/vois/templates/template3panelsTest.ipynb
+++ b/src/vois/templates/template3panelsTest.ipynb
@@ -9,6 +9,9 @@
    },
    "outputs": [],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -24,6 +27,9 @@
     "p = template3panels(output)\n",
     "card = p.create()\n",
     "\n",
+    "p.titlecolor  = '#ccaaaa'\n",
+    "p.footercolor = '#6699aa'\n",
+    "\n",
     "# Open the page\n",
     "p.open()"
    ]
@@ -31,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "803ff8ea",
+   "id": "1c972ab4-64b8-4b0d-86ec-c5dd611d84b0",
    "metadata": {},
    "outputs": [],
    "source": []
