--- a/src/vois/templates/dynamicButtonTest.ipynb
+++ b/src/vois/templates/dynamicButtonTest.ipynb
@@ -10,6 +10,7 @@
     "%run dynamicButton\n",
     "\n",
     "d = dynamicButton()\n",
+    "d.color = 'red'\n",
     "d.draw()"
    ]
   },
@@ -24,9 +25,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -38,7 +39,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
