--- a/src/vois/vuetify/Tests/toggleTest.ipynb
+++ b/src/vois/vuetify/Tests/toggleTest.ipynb
@@ -4,10 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d7b41f34",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run toggle.py\n",
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "%run ../toggle.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "output = widgets.Output()\n",
@@ -21,6 +26,19 @@
     "\n",
     "display(t.draw())\n",
     "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6c67b9-735a-495e-85bc-b2c6a660f8b0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t.colorselected   = '#ffdd00'\n",
+    "t.colorunselected = '#00ffdd'"
    ]
   },
   {
@@ -69,9 +87,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -83,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
