Updates to pageConfigurator

--- a/src/vois/templates/template2panelsTest.ipynb
+++ b/src/vois/templates/template2panelsTest.ipynb
@@ -27,8 +27,8 @@
     "p = template2panels(output)\n",
     "card = p.create()\n",
     "\n",
-    "p.titlecolor  = '#ccaaaa'\n",
-    "p.footercolor = '#6699aa'\n",
+    "#p.titlecolor  = '#ccaaaa'\n",
+    "#p.footercolor = '#6699aa'\n",
     "\n",
     "# Open the page\n",
     "p.open()"
