Added icons to toggle

--- a/src/vois/vuetify/Tests/toggleTest.ipynb
+++ b/src/vois/vuetify/Tests/toggleTest.ipynb
@@ -31,6 +31,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a91442d-b046-4639-8612-83db275a2c61",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t = toggle(0, ['', '', ''], tooltips=['Tooltip for label1'], icons=['', '', ''],\n",
+    "           row=True, width=250, justify='start', rounded=False, outlined=False, dark=False, paddingcol=1)\n",
+    "\n",
+    "display(t.draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aa6c67b9-735a-495e-85bc-b2c6a660f8b0",
    "metadata": {
     "tags": []
@@ -58,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run toggle.py\n",
+    "# Tiled toggle (no space between buttons and buttons completely squared)\n",
+    "%run ../toggle.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -71,6 +87,32 @@
     "\n",
     "t = toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
     "           onchange=onchange, row=True, width=150, rounded=False, justify='start', paddingrow=0, tile=True)\n",
+    "\n",
+    "display(t.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4985f667-5317-4c4e-922c-167f235d3e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Icons toggle\n",
+    "%run ../toggle.py\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange(index):\n",
+    "    with output:\n",
+    "        print(index)\n",
+    "\n",
+    "t = toggle(0, ['', '', ''], icons=['mdi-file-word-box-outline', 'mdi-file-word-box', 'mdi-auto-fix'], tooltips=['White text', 'Black text', 'Auto set text color'],\n",
+    "           onchange=onchange, row=True, width=50, rounded=False, justify='start', paddingrow=0, tile=True)\n",
     "\n",
     "display(t.draw())\n",
     "display(output)"
