Added dark property to Button

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cb7d67c9",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "77e17994",
    "metadata": {
     "tags": []
@@ -28,55 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3da1d456",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "512956b9ed984925abdb210215d2ba47",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "869d058bc10f4230a19639aae7d4fb70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a0192af7f7e499faa98c6fa8c113ac4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(children=[Container(children=[Tooltip(bottom=True, children=['Open a URL'], color='#999999', layout=Non…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def onclick(arg=None):\n",
     "    if arg==1:\n",
@@ -85,7 +42,7 @@
     "        b2.selected = not b2.selected\n",
     "\n",
     "b1 = Button('Test button 1', textweight=300, onclick=onclick, argument=1, width=150, small=False, disabled=False, height=36, outlined=False, \n",
-    "            tooltip='Example of an extremely long tooltip text', selected=False, icon='mdi-car-light-high', iconleft=True, iconcolor='black', rounded=True)\n",
+    "            tooltip='Example of an extremely long tooltip text', selected=False, icon='mdi-car-light-high', iconleft=True, iconcolor='#008800', rounded=True)\n",
     "\n",
     "b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False, \n",
     "            tooltip='Example of an extremely long tooltip text', selected=True, rounded=False, tile=True,\n",
@@ -100,41 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "2b6bf4e4-0252-4e9f-9d2d-c35b3af0ee6f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "b1.dark = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5a3637ae",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42e7ed163ae7455096e38d9d645f205f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "011477f3445d4a769c5083b8afee0c75",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ba = Button('', icon='mdi-sort-ascending',  width=40, iconcolor='black', selected=False, outlined=False)\n",
     "bd = Button('', icon='mdi-sort-descending', width=40, iconcolor='black', selected=True,  outlined=False)\n",
@@ -143,28 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8f9d1dd5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34e54086b0b54eeb985616e404711b9c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = button.button('Test button', textweight=450, width=250, height=46,\n",
     "           selected=True, rounded=True, \n",
@@ -175,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ec32281b",
    "metadata": {
     "tags": []
@@ -187,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d8020645",
    "metadata": {
     "tags": []
@@ -199,27 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e2f69560",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12df8d2d6ca84fb4afd8763f0ae25726",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "button(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Icon only button\n",
     "b1 = button.button('', textcolor='#ffffff00', onclick=onclick, argument=1, width=50, small=False, disabled=False, height=\"1.8vh\", outlined=False, \n",
@@ -244,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
