--- a/src/vois/vuetify/Tests/toggleTest.ipynb
+++ b/src/vois/vuetify/Tests/toggleTest.ipynb
@@ -68,10 +68,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "da728d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a37ab41c111a430fbee2121bb579f5d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Button(children=[Container(children=[Tooltip(bottom=True, children=['Tooltip for option 1'], col…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9a77bb8bad04df3b9eae05ae6fff2cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Tiled toggle (no space between buttons and buttons completely squared)\n",
     "%run ../toggle.py\n",
@@ -94,10 +123,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "id": "d17e8eb4-fc80-4ee9-8f09-f92912b84cb1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t.dark = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "4985f667-5317-4c4e-922c-167f235d3e27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6eadcf10e10044ee86ea2114040eeec4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Button(children=[Container(children=[Tooltip(bottom=True, children=['White text'], color='#99999…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d4a60ff382546dab2ff982947218459",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Icons toggle\n",
     "%run ../toggle.py\n",
@@ -111,8 +181,9 @@
     "    with output:\n",
     "        print(index)\n",
     "\n",
-    "t = toggle(0, ['', '', ''], icons=['mdi-file-word-box-outline', 'mdi-file-word-box', 'mdi-auto-fix'], tooltips=['White text', 'Black text', 'Auto set text color'],\n",
-    "           onchange=onchange, row=True, width=50, rounded=False, justify='start', paddingrow=0, tile=True)\n",
+    "t = toggle(0, ['', '', ''], icons=['mdi-file-word-box-outline', 'mdi-file-word-box', 'mdi-auto-fix'],\n",
+    "           tooltips=['White text', 'Black text', 'Auto set text color'], dark=False,\n",
+    "           onchange=onchange, row=True, width=50, rounded=False, justify='start', paddingrow=1, tile=True)\n",
     "\n",
     "display(t.draw())\n",
     "display(output)"
@@ -120,8 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "4744d44b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.dark = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cebd7c4-9e0d-42b3-8c94-f85d1ad94203",
    "metadata": {},
    "outputs": [],
    "source": []
