Added auto colors for footer in PageConfigurator

--- a/src/vois/colorsTest.ipynb
+++ b/src/vois/colorsTest.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "888a163b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#7f7f00'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%run colors.py\n",
     "s = colorInterpolator(['#ff0000', '#00ff00'])\n",
@@ -14,14 +25,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "551d1499",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#ff0000',\n",
+       " '#f10d00',\n",
+       " '#e41a00',\n",
+       " '#d62800',\n",
+       " '#c93500',\n",
+       " '#bb4300',\n",
+       " '#ae5000',\n",
+       " '#a15d00',\n",
+       " '#936b00',\n",
+       " '#867800',\n",
+       " '#788600',\n",
+       " '#6b9300',\n",
+       " '#5da100',\n",
+       " '#50ae00',\n",
+       " '#43bb00',\n",
+       " '#35c900',\n",
+       " '#28d600',\n",
+       " '#1ae400',\n",
+       " '#0df100',\n",
+       " '#00ff00']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%run colors.py\n",
     "s = colorInterpolator(['#ff0000', '#00ff00'])\n",
     "s.GetColors(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9081dd9d-a676-454c-821f-5e3a765f4498",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 255)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run colors.py\n",
+    "complementary(string2rgb('#ff00ff'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c768dcea-0cc0-4a8d-942f-a233c8a5973d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(255, 38, 38)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run colors.py\n",
+    "lighter(string2rgb('#ff0000'), factor=0.15)"
    ]
   },
   {
@@ -139,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
