Managed titleheight and footerheight in PageConfigurator

--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -29,6 +29,8 @@
     "\n",
     "#p.titlecolor  = '#ccaaaa'\n",
     "#p.footercolor = '#6699aa'\n",
+    "#p.titleheight = 100\n",
+    "#p.footerheight = 50\n",
     "\n",
     "# Open the page\n",
     "p.open()"
@@ -37,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfdab35b-163f-40f0-9f97-93263a8e0b6f",
+   "id": "ba0ed6cb-76c3-46fd-b64d-910f578cccd5",
    "metadata": {},
    "outputs": [],
    "source": []
