--- a/src/vois/templates/template2panelsTest.ipynb
+++ b/src/vois/templates/template2panelsTest.ipynb
@@ -29,6 +29,8 @@
     "\n",
     "#p.titlecolor  = '#ccaaaa'\n",
     "#p.footercolor = '#6699aa'\n",
+    "#p.titleheight = 100\n",
+    "#p.footerheight = 50\n",
     "\n",
     "# Open the page\n",
     "p.open()"
@@ -37,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1815f530-fde1-433d-952f-7efccf8a9b4d",
+   "id": "629df0a3-a49f-4cea-8bda-9f1b14e3ecfe",
    "metadata": {},
    "outputs": [],
    "source": []
