--- a/src/vois/templates/template3panelsTest.ipynb
+++ b/src/vois/templates/template3panelsTest.ipynb
@@ -29,6 +29,8 @@
     "\n",
     "#p.titlecolor  = '#ccaaaa'\n",
     "#p.footercolor = '#6699aa'\n",
+    "#p.titleheight = 100\n",
+    "#p.footerheight = 50\n",
     "\n",
     "# Open the page\n",
     "p.open()"
