--- a/src/vois/vuetify/Tests/sliderFloatTest.ipynb
+++ b/src/vois/vuetify/Tests/sliderFloatTest.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "97418066",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run sliderFloat.py\n",
+    "%run ../sliderFloat.py\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -121,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
