Added appname and pagetitle to PageCOnfigurator

--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7d7e75911a14ace90cbd5b3f8302014",
+       "model_id": "19f5c0bbeb0741ab92743ffafc41a01e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,12 +44,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1bf76a60",
+   "execution_count": 33,
+   "id": "82d62364-8115-46ba-a70e-87c5ae9133a4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c4f56190398474cadf12294297b1f8f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cd06eb7f-f401-4bba-930f-feffd34322b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'appname': 'My app',\n",
+       " 'title': 'My page',\n",
+       " 'titlecolor': '#0d856d',\n",
+       " 'titledark': True,\n",
+       " 'titleheight': 54,\n",
+       " 'titleimageurl': '',\n",
+       " 'footercolor': '#a0dcd0',\n",
+       " 'footerdark': False,\n",
+       " 'footerheight': 30,\n",
+       " 'copyrighttext': 'European Commission - Joint Research Centre',\n",
+       " 'show_back': True,\n",
+       " 'left_back': True,\n",
+       " 'show_help': True,\n",
+       " 'show_credits': True,\n",
+       " 'logoappurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png',\n",
+       " 'logocreditsurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/EC-JRC-logo_horizontal_EN_neg_transparent-background.png',\n",
+       " 'logowidth': 40,\n",
+       " 'creditswidth': 120,\n",
+       " 'transition': 'dialog-bottom-transition'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c.page.state"
    ]
@@ -57,17 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff39b22c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.titlecolor.color"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd06eb7f-f401-4bba-930f-feffd34322b4",
+   "id": "fe2635be-63fa-4808-9349-abf1853f7d90",
    "metadata": {},
    "outputs": [],
    "source": []
