--- a/src/vois/templates/template3panelsTest.ipynb
+++ b/src/vois/templates/template3panelsTest.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c37e5fbd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f609d6e51ee141e19fabe461921bd3de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
