Created new widgets UploadImage

--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -398,6 +398,14 @@ treeview widget
 
 .. image:: figures/line.png
 
+UploadImage widget
+------------------
+
+.. automodule:: UploadImage
+    :members: 
+
+.. image:: figures/line.png
+
 upload widget
 -------------
 
