--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19f5c0bbeb0741ab92743ffafc41a01e",
+       "model_id": "a3d75b2c01044afcaac1b4ed9a97a10e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,6 +40,73 @@
     "%run PageConfigurator.py\n",
     "\n",
     "c = PageConfigurator(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b93e2ff9-4946-4d54-9da1-167dc3ab0d3a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "43b7c9e4156949f990be5192d7f03d62",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
+    "from ipywidgets import widgets, Layout\n",
+    "from vois.vuetify import upload, dialogGeneric\n",
+    "from IPython.display import display\n",
+    "from PIL import Image\n",
+    "import ipyvuetify as v\n",
+    "\n",
+    "debug = widgets.Output()\n",
+    "display(debug)\n",
+    "\n",
+    "preview = widgets.Output(layout=Layout(height='600px'))\n",
+    "\n",
+    "def on_file_upload(files):\n",
+    "    with debug:\n",
+    "        # If at least one file has been selected      \n",
+    "        if len(files) > 0:\n",
+    "            preview.clear_output()\n",
+    "            for f in files:\n",
+    "                image = Image.open(f['file_obj'])\n",
+    "                with preview:\n",
+    "                    display(image)\n",
+    "\n",
+    "        # No files selected\n",
+    "        else:\n",
+    "            preview.clear_output()\n",
+    "\n",
+    "u = upload.upload(accept=\"image/png, image/jpeg, image/bmp\",\n",
+    "                  label='Images', onchange=on_file_upload,\n",
+    "                  placeholder='Click to select images to upload')\n",
+    "\n",
+    "spacerY = v.Html(tag='div', style_='width: 0px; height: 20px;')\n",
+    "content = v.Card(flat=True, class_='pa-0, ma-0 ml-4 mr-4', children=[widgets.VBox([u.draw(), spacerY, preview])])\n",
+    "\n",
+    "def on_ok():\n",
+    "    pass\n",
+    "\n",
+    "dialogImage = dialogGeneric.dialogGeneric(title='Select image for title bar', on_ok=on_ok,\n",
+    "                                          text='   ', color=settings.color_second, width=1200,\n",
+    "                                          show=True, addclosebuttons=True, addokcancelbuttons=True,\n",
+    "                                          fullscreen=False, content=[content], output=debug)\n"
    ]
   },
   {
