--- a/src/vois/vuetify/Tests/uploadTest.ipynb
+++ b/src/vois/vuetify/Tests/uploadTest.ipynb
@@ -9,10 +9,13 @@
    },
    "outputs": [],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
     "from ipywidgets import widgets\n",
     "from PIL import Image\n",
     "\n",
-    "%run upload.py\n",
+    "%run ../upload.py\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -120,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
