--- a/src/vois/vuetify/Tests/uploadTest.ipynb
+++ b/src/vois/vuetify/Tests/uploadTest.ipynb
@@ -38,6 +38,8 @@
     "#u = upload(accept=\"image/png, image/jpeg, image/bmp\", onchange=on_file_upload,\n",
     "#           placeholder='Click to upload', width='600px', margins=\"pa-0 ma-0 mt-n5 mb-n5\")\n",
     "\n",
+    "u.color = 'red'\n",
+    "\n",
     "display(u.draw())\n",
     "display(output)"
    ]
